--- a/TestProject_Gradle/build.gradle
+++ b/TestProject_Gradle/build.gradle
@@ -15,6 +15,7 @@ dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
     testCompile group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '3.14.0'
     compile group: 'log4j', name: 'log4j', version: '1.2.17'
+    testCompile  group: 'org.testng', name: 'testng', version: '6.0'
 }
 
 test {
