--- a/TestProject_Gradle/build.gradle
+++ b/TestProject_Gradle/build.gradle
@@ -16,6 +16,8 @@ dependencies {
     testCompile group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '3.14.0'
     compile group: 'log4j', name: 'log4j', version: '1.2.17'
     compile group: 'org.testng', name: 'testng', version: '6.9.10'
+    compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.11.1'
+    compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.11.1'
 }
 
 test {
