--- a/TestProject_Gradle/src/test/resources/log4j.properties
+++ b/TestProject_Gradle/src/test/resources/log4j.properties
@@ -1,5 +1,5 @@
 # Root logger
-log4j.rootLogger=DEBUG,file
+log4j.rootLogger=DEBUG,file,INFO,stdout
 log4j.appender.file=org.apache.log4j.RollingFileAppender
 log4j.appender.file.File=src\\test\\resources\\log.logs
 log4j.appender.file.maxFileSize=900KB
@@ -17,3 +17,9 @@ log4j.appender.dest1.layout=org.apache.log4j.PatternLayout
 log4j.appender.dest1.layout.ConversionPattern=%d{dd/MM/yyyy HH:mm:ss} %c %m%n
 log4j.appender.dest1.File=D:\\ Guru99\\src\\Manual.logs
 log4j.appender.dest1.Append=false
+
+# Direct log messages to stdout
+log4j.appender.stdout=org.apache.log4j.ConsoleAppender
+log4j.appender.stdout.Target=System.out
+log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
+log4j.appender.stdout.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
