--- a/TestProject_Gradle/src/test/resources/log4j.properties
+++ b/TestProject_Gradle/src/test/resources/log4j.properties
@@ -1,5 +1,5 @@
 # Root logger
-log4j.rootLogger=DEBUG,file,INFO,stdout
+log4j.rootLogger=DEBUG,file,stdout
 log4j.appender.file=org.apache.log4j.RollingFileAppender
 log4j.appender.file.File=src\\test\\resources\\log.logs
 log4j.appender.file.maxFileSize=900KB
